temporarily fix the resume title wrapping on phone

--- a/front_end/src/pages/resume/index.less
+++ b/front_end/src/pages/resume/index.less
@@ -8,6 +8,8 @@
     font-family: 'Raleway', sans-serif;
     font-size: 30px;
     font-weight: 100;
+    // temporary fix for text wrapping, media queries will be used
+    overflow-wrap: anywhere;
 }
 
 .flex {
